@@ -16,6 +16,13 @@ git-annex (6.20160419) UNRELEASED; urgency=medium
   * When git-annex is used with a git version older than 2.2.0, disable
     support for adjusted branches, since GIT_COMMON_DIR is needed to update
     them and was first added in that version of git.
+  * git 2.8.1 (or perhaps 2.9.0) is going to prevent git merge from
+    merging in unrelated branches. Since the webapp's pairing etc features
+    often combine together repositories with unrelated histories, work around
+    this behavior change by setting GIT_MERGE_ALLOW_UNRELATED_HISTORIES
+    when the assistant merges. Note though that this is not done for
+    git annex sync's merges, so it will follow git's default or configured
+    behavior.
 
  -- Joey Hess <id@joeyh.name>  Tue, 19 Apr 2016 12:57:15 -0400
 
